[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Edit_team.gd" type="Script" id=1]
[ext_resource path="res://asset/prova_theme.tres" type="Theme" id=2]
[ext_resource path="res://asset/edit_theme.tres" type="Theme" id=3]
[ext_resource path="res://asset/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0823529, 0.117647, 0.294118, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
expand_margin_left = 3.0

[node name="Edit_team" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2074.0
margin_bottom = 1228.0
color = Color( 0.156863, 0.196078, 0.392157, 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 2074.0
margin_bottom = 1228.0

[node name="separator2" type="Label" parent="HBox"]
margin_top = 607.0
margin_right = 105.0
margin_bottom = 621.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox"]
margin_left = 109.0
margin_top = 554.0
margin_right = 571.0
margin_bottom = 673.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = " Usa l'ultima riga per inserire 
un nuovo giocatore"
align = 1
valign = 1

[node name="separator" type="Label" parent="HBox"]
margin_left = 575.0
margin_top = 607.0
margin_right = 681.0
margin_bottom = 621.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="HBox"]
margin_left = 685.0
margin_right = 1385.0
margin_bottom = 1228.0
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 3 )
alignment = 1

[node name="separator4" type="Label" parent="HBox/VBox"]
margin_right = 700.0
margin_bottom = 408.0
size_flags_vertical = 3

[node name="players_box" type="GridContainer" parent="HBox/VBox"]
margin_top = 410.0
margin_right = 700.0
margin_bottom = 818.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 700, 0 )
rect_clip_content = true
size_flags_horizontal = 15
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/vseparation = 1
custom_constants/hseparation = 10
columns = 6

[node name="separator5" type="Label" parent="HBox/VBox"]
margin_top = 820.0
margin_right = 700.0
margin_bottom = 1228.0
size_flags_vertical = 3

[node name="separator4" type="Label" parent="HBox"]
margin_left = 1389.0
margin_top = 607.0
margin_right = 1495.0
margin_bottom = 621.0
size_flags_horizontal = 3

[node name="buttonContainer" type="VBoxContainer" parent="HBox"]
margin_left = 1499.0
margin_right = 1964.0
margin_bottom = 1228.0
size_flags_horizontal = 3
custom_constants/separation = 2
alignment = 1

[node name="Aggiorna" type="Button" parent="HBox/buttonContainer"]
margin_top = 477.0
margin_right = 465.0
margin_bottom = 532.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Aggiorna"

[node name="separator2" type="Label" parent="HBox/buttonContainer"]
margin_top = 534.0
margin_right = 465.0
margin_bottom = 548.0

[node name="Salva" type="Button" parent="HBox/buttonContainer"]
margin_top = 550.0
margin_right = 465.0
margin_bottom = 605.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Salva"

[node name="separator3" type="Label" parent="HBox/buttonContainer"]
margin_top = 607.0
margin_right = 465.0
margin_bottom = 621.0

[node name="Usa" type="Button" parent="HBox/buttonContainer"]
margin_top = 623.0
margin_right = 465.0
margin_bottom = 678.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = " Usa senza salvare "

[node name="separator" type="Label" parent="HBox/buttonContainer"]
margin_top = 680.0
margin_right = 465.0
margin_bottom = 694.0

[node name="Annulla" type="Button" parent="HBox/buttonContainer"]
margin_top = 696.0
margin_right = 465.0
margin_bottom = 751.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Annulla"

[node name="separator3" type="Label" parent="HBox"]
margin_left = 1968.0
margin_top = 607.0
margin_right = 2074.0
margin_bottom = 621.0
size_flags_horizontal = 3

[connection signal="button_up" from="HBox/buttonContainer/Aggiorna" to="." method="_on_Aggiorna_button_up"]
[connection signal="button_up" from="HBox/buttonContainer/Salva" to="." method="_on_Salva_button_up"]
[connection signal="button_up" from="HBox/buttonContainer/Usa" to="." method="_on_Usa_button_up"]
[connection signal="button_up" from="HBox/buttonContainer/Annulla" to="." method="_on_Annulla_button_up"]
